--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: home
-title: Sohrab Ahmed
-subtitle: Data Engineering Advisor | DeltaLake Consultant
-meta-title: "Hi, I'm Sohrab"
+title: Hexaim
+subtitle: Extending Your Reach with Technologies
+
+meta-title: "Hi, Welcome to Hexaim"
 use-site-title: true
 cover-img:
   - "/assets/img/nebula.jpg" : "The Helix Nebula"
@@ -14,7 +15,8 @@ cover-img:
 <script>
   $(function(){
     $(".typed").typed({
-      strings: ["Big Data.","Azure.","Machine Learning.","Artificial Inteligence.","Databricks.","Open Source."],
+      strings: ["Big Data.","Azure.","Machine Learning.","Artificial Inteligence.","Databricks.","Open Source.","Cloud ","Data","Testing","Website Designing","Mobile Application Development","Digital Marketing","Java","DevOps","ELK","Support","Aws ","Azure","SEO","IT Support","Salesforce","Mulesoft","CRM","ERP","SAP","mainframe","staffing","Data Engineering"
+],
       typeSpeed: 100,
       loop: true,
       backDelay: 1000
