--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ cover-img:
   <div class="row">
     <div class="col-sm-12">
       <div class="text-center">
-          <h1>I write about <span class="typed" style="color:#890000";></span></h1>
+          <h1>We provide solutions for <span class="typed" style="color:#890000";></span></h1>
       </div>
     </div>
   </div>
